# tr

TravelCompanion/: README.md  app.py  pyproject.toml  travel_agent.py  utils.py
TravelCompanion/attached_assets/: Pasted-from-dotenv-import-load-dotenv-load-dotenv-import-os-import-requests-from-datetime-import-date-1745300110785.txt
TravelCompanion/static/css/: leaflet-custom.css  style.css
TravelCompanion/static/js/: app.js  travel-planner.js
TravelCompanion/templates/: base.html
TravelCompanion/templates/travel_app/: api_keys.html  index.html
TravelCompanion/travel_app/: models.py  urls.py  views.py
TravelCompanion/travel_app/api/: serializers.py  views.py
TravelCompanion/travel_app/migrations/: 0001_initial.py
TravelCompanion/travel_planner/: settings.py  urls.py
TravelCompanion/travel_planner/travel_planner/: settings.py
